--- a/index.html
+++ b/index.html
@@ -19,243 +19,176 @@
   <h6> Xi Chapter </h6>
 </div>
 <div class="btn-group" role="group" aria-label="...">
-  <a href = "index.html"><button type="button" class="btn btn-default" href = "index.html">Home</button></a>
+  <a href = "index.html"><button type="button" class="btn btn-default" href = "index.html">Home - Xi Chapter</button></a>
   <a href = "abouttke.html"><button type="button" class="btn btn-default">About TKE</button></a>
-  <a href = "aboutxi.html"><button type="button" class="btn btn-default">About Xi Chapter</button></a>
   <a href = "freshman.html"><button type="button" class="btn btn-default">Freshmen Scholarship</button></a>
   <a href = "contact.html"><button type="button" class="btn btn-default">Contact Us</button></a>
 </div>
 <br> <br>
-<center><p style = "font-size: 16px"> We are Xi Chapter - Tau Kappa Epsilon. Meet our current actives. </p></center>
+<center><p style = "font-size: 16px"> We are Xi Chapter - Tau Kappa Epsilon, the
+friendliest and most diverse fraternity at Washington University. We are always looking for active, ambitious
+men to join our ranks. Meet our active members, see what you can at TKE and come visit us at our house on Lower Row. </p></center>
+<h3> Xi Chapter </h3>
+<p> Our TKE chapter at Washington University in St. Louis, or Xi Chapter (pronounced “zi”), was founded September 17-18th, 1920 as the 14th TKE chapter and has been active ever since, making Xi the oldest continuously-running TKE chapter in the world.  As one of the first official members of the Washington University Greek community, TKE gained popularity as a way for students to live on campus. Our first housing was actually a block in Tower Hall Dormitory – what we now call Karl D. Umrath Hall. In 1924 Xi chapter became the first fraternity on campus to raise the money needed to buy a house. 1 Fraternity Row occupied the land that is now the Law School and would house our chapter for many years. During World War II, we made another move in order to donate our house as military barracks for troops in St. Louis. TKE spent time off campus in the 80s, and the original house was demolished to make way for a new building and expansion along Lower Fraternity Row. We received our new home on the lower row in 2001. Today, the crest outside of our house is the sole remaining stone “Bastard Crest” in the world, a rare crest in worldwide TKE history that very few chapters were founded under. </p>
+<p> Xi - TKE at Washington University is both the oldest fraternity on campus and the longest continually-active chapter of Tau Kappa Epsilon in the world. In September of 2020 Xi Chapter will turn 100 years old.</p>
+<h3> Our Officers </h3>
 <div class="row">
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="ryan.jpg" alt="...">
     </a>
   </div>
  <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="hunter.jpg" alt="...">
     </a>
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="mattstern.jpg" alt="...">
     </a>
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="andrew.jpg" alt="...">
     </a>
   </div>
 </div>
 <div class = "row">
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="paul.jpg" alt="...">
     </a>
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="david.jpg" alt="...">
     </a>
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="matt.jpg" alt="...">
     </a>
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="harry.jpg" alt="...">
     </a>
   </div>
 </div>
 <div class = "row">
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="jordan.jpg" alt="...">
     </a>
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="mario.jpg" alt="...">
     </a>
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="sam.jpg" alt="...">
     </a>
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="..." alt="...">
+      <img src="michael.jpg" alt="...">
     </a>
   </div>
 </div>
-<div class = "row">
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
+<h3> TKE On Campus </h3>
+<p> We work closely with WashU's sororities to have an active role in their charitable events. </p>
+<div id="carousel-example-generic1" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic1" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic1" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic1" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic1" data-slide-to="3"></li>
+  </ol>
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <center><img src="13.jpg" alt="..."></center>
+      <div class="carousel-caption">
+      Our pizza station at this year's Thurtene Carnival.
+      </div>
+    </div>
+    <div class="item">
+      <center><img src="canstruction.png" alt="..."></center>
+      <div class="carousel-caption">
+      CANstruction with AEPhi, 400 cans of food donated to Operation Food Search.
+      </div>
+    </div>
+    <div class="item">
+      <center><img src="kappa.jpg" alt="..."></center>
+      <div class="carousel-caption">
+      TKE Does Kappa Karaoke!
+      </div>
+    </div>
+    <div class="item">
+      <center><img src="anchor1.jpg" alt="..."></center>
+      <div class="carousel-caption">
+      TKE Wins Anchorsplash!
+      </div>
+    </div>
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic1" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic1" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
-<div class = "row">
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
 </div>
-<div class = "row">
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
+<h3> Our Events </h3>
+<p> We do a lot of fun things as a chapter: video game tournaments, paintball, dinners, game nights among many other activities.
+Scroll through to see all the fun you could be having as a new active. </p>
+<div id="carousel-example-generic2" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic2" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic2" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic2" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <center><img src="alumni.jpg" alt="..."></center>
+      <div class="carousel-caption">
+      Our annual banquet with alumnis and actives
+      </div>
+    </div>
+    <div class="item">
+      <center><img src="paintball.jpg" alt="..."></center>
+      <div class="carousel-caption">
+      Five survivors from paintball 
+      </div>
+    </div>
+    <div class="item">
+      <center><img src="cards.jpg" alt="..."></center>
+      <div class="carousel-caption">
+      First Cards Game of the Season
+      </div>
+    </div>
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic2" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic2" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
-<div class = "row">
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
 </div>
-<div class = "row">
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-</div>
-<div class = "row">
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-</div>
-<div class = "row">
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-</div>
-<div class = "row">
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="..." alt="...">
-    </a>
-  </div>
-</div>
-   <script src="http://code.jquery.com/jquery.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+<script src="http://code.jquery.com/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
   </body>
 </html>
 
