--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,8 @@
   <h6> Xi Chapter </h6>
 </div>
 <div class="btn-group" role="group" aria-label="...">
-  <a href = "index.html"><button type="button" class="btn btn-default" href = "index.html">Home</button></a>
+  <a href = "index.html"><button type="button" class="btn btn-default" href = "index.html">Home - Xi Chapter</button></a>
   <a href = "abouttke.html"><button type="button" class="btn btn-default">About TKE</button></a>
-  <a href = "aboutxi.html"><button type="button" class="btn btn-default">About Xi Chapter</button></a>
   <a href = "freshman.html"><button type="button" class="btn btn-default">Freshmen Scholarship</button></a>
   <a href = "contact.html"><button type="button" class="btn btn-default">Contact Us</button></a>
 </div>
