--- a/freshman.html
+++ b/freshman.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" type="text/css" href="theme.css">
+    <link rel="stylesheet" type="text/css" href="theme3.css">
   </head>
   <body>
     <div class = "header">
@@ -19,17 +19,57 @@
   <h6> Xi Chapter </h6>
 </div>
     <div class="btn-group" role="group" aria-label="...">
-  <a href = "index.html"><button type="button" class="btn btn-default" href = "index.html">Home</button></a>
+  <a href = "index.html"><button type="button" class="btn btn-default" href = "index.html">Home - Xi Chapter</button></a>
   <a href = "abouttke.html"><button type="button" class="btn btn-default">About TKE</button></a>
-  <a href = "aboutxi.html"><button type="button" class="btn btn-default">About Xi Chapter</button></a>
   <a href = "freshman.html"><button type="button" class="btn btn-default">Freshmen Scholarship</button></a>
   <a href = "contact.html"><button type="button" class="btn btn-default">Contact Us</button></a>
 </div>
+<br> <br>
 <p style = "width: 300px"> The Freshman Scholarship is an exclusive opportunity for freshmen to meet the current members 
-of our chapter. After applying, they have the opportunity to win $500 for first place and $250 for second place. Applicants are interviewed by members of the chapter for and the awards are presented at a formal banquet. Scroll down to see photos from the 2014 Freshman Scholarship Banquet</p>
-<img src = "TKE1.jpg" alt = "...">
-<img src = "TKE2.jpg" alt = "...">
-<img src = "TKE3.jpg" alt = "...">
+of our chapter. After applying, they have the opportunity to win $500 for first place and $250 for second place. Applicants are interviewed by members of the chapter for and the awards are presented at a formal banquet. Scroll down to see photos from the 2014 Freshman Scholarship Banquet. To apply for the scholarship, please click the Contact Us button and fill out the form.</p>
+<h3> The Banquet </h3>
+<p> Scroll through the carousel to see pictures from last year's banquet. </p>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <center><img src="TKE1.jpg" alt="..."></center>
+      <div class="carousel-caption">
+      </div>
+    </div>
+    <div class="item">
+      <center><img src="TKE2.jpg" alt="..."></center>
+      <div class="carousel-caption">
+      </div>
+    </div>
+    <div class="item">
+      <center><img src="TKE3.jpg" alt="..."></center>
+      <div class="carousel-caption">
+      </div>
+    </div>
+    <div class="item">
+      <center><img src="TKE4.jpg" alt="..."></center>
+      <div class="carousel-caption">
+      </div>
+    </div>
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
   </body>
