--- a/contact.html
+++ b/contact.html
@@ -9,14 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" type="text/css" href="theme.css">
+    <link rel="stylesheet" type="text/css" href="theme2.css">
   </head>
   <body>
   <div class = "header">
   <img src = "logo.png">
   <h2> Tau Kappa Epsilon </h2>
   <h4> Washington University in St. Louis </h4>
-  <h6> Xi Chapter </h6>
+  <h4> Xi Chapter </h4>
 </div>
 <div class="btn-group" role="group" aria-label="...">
   <a href = "index.html"><button type="button" class="btn btn-default" href = "index.html">Home - Xi Chapter</button></a>
@@ -24,13 +24,16 @@
   <a href = "freshman.html"><button type="button" class="btn btn-default">Freshmen Scholarship</button></a>
   <a href = "contact.html"><button type="button" class="btn btn-default">Contact Us</button></a>
 </div>
+<br>
+<br>
+<p> Thank you for your interest in Tau Kappa Epsilon! Please fill out the following form and we will 
+contact you as soon as possible. Fields marked with an asterisk are mandatory. </p>
 <form name="htmlform" method="post" action="html_form_send.php">
 <table width="450px">
 </tr>
 <tr>
 <br> <br>
-<p> Thank you for your interest in Tau Kappa Epsilon! Please fill out the following form and we will 
-contact you as soon as possible </p>
+
  <td valign="top">
   <label for="first_name">First Name *</label>
  </td>
