--- a/freshman.html
+++ b/freshman.html
@@ -16,7 +16,7 @@
   <img src = "logo.png">
   <h2> Tau Kappa Epsilon </h2>
   <h4> Washington University in St. Louis </h4>
-  <h6> Xi Chapter </h6>
+  <h4> Xi Chapter </h4>
 </div>
     <div class="btn-group" role="group" aria-label="...">
   <a href = "index.html"><button type="button" class="btn btn-default" href = "index.html">Home - Xi Chapter</button></a>
@@ -25,7 +25,7 @@
   <a href = "contact.html"><button type="button" class="btn btn-default">Contact Us</button></a>
 </div>
 <br> <br>
-<p style = "width: 300px"> The Freshman Scholarship is an exclusive opportunity for freshmen to meet the current members 
+<p> The Freshman Scholarship is an exclusive opportunity for freshmen to meet the current members 
 of our chapter. After applying, they have the opportunity to win $500 for first place and $250 for second place. Applicants are interviewed by members of the chapter for and the awards are presented at a formal banquet. Scroll down to see photos from the 2014 Freshman Scholarship Banquet. To apply for the scholarship, please click the Contact Us button and fill out the form.</p>
 <h3> The Banquet </h3>
 <p> Scroll through the carousel to see pictures from last year's banquet. </p>
