--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <img src = "logo.png">
   <h2> Tau Kappa Epsilon </h2>
   <h4> Washington University in St. Louis </h4>
-  <h6> Xi Chapter </h6>
+  <h4> Xi Chapter </h4>
 </div>
 <div class="btn-group" role="group" aria-label="...">
   <a href = "index.html"><button type="button" class="btn btn-default" href = "index.html">Home - Xi Chapter</button></a>
@@ -25,9 +25,10 @@
   <a href = "contact.html"><button type="button" class="btn btn-default">Contact Us</button></a>
 </div>
 <br> <br>
-<center><p style = "font-size: 16px"> We are Xi Chapter - Tau Kappa Epsilon, the
+<p> We are Xi Chapter - Tau Kappa Epsilon, the
 friendliest and most diverse fraternity at Washington University. We are always looking for active, ambitious
-men to join our ranks. Meet our active members, see what you can at TKE and come visit us at our house on Lower Row. </p></center>
+men to join our ranks during rush. Meet our active members, see what you can at TKE and come visit us at our house on Lower Row.
+Click the "Contact Us" button to fill out the form to learn more about rush and TKE.</p>
 <h3> Xi Chapter </h3>
 <p> Our TKE chapter at Washington University in St. Louis, or Xi Chapter (pronounced “zi”), was founded September 17-18th, 1920 as the 14th TKE chapter and has been active ever since, making Xi the oldest continuously-running TKE chapter in the world.  As one of the first official members of the Washington University Greek community, TKE gained popularity as a way for students to live on campus. Our first housing was actually a block in Tower Hall Dormitory – what we now call Karl D. Umrath Hall. In 1924 Xi chapter became the first fraternity on campus to raise the money needed to buy a house. 1 Fraternity Row occupied the land that is now the Law School and would house our chapter for many years. During World War II, we made another move in order to donate our house as military barracks for troops in St. Louis. TKE spent time off campus in the 80s, and the original house was demolished to make way for a new building and expansion along Lower Fraternity Row. We received our new home on the lower row in 2001. Today, the crest outside of our house is the sole remaining stone “Bastard Crest” in the world, a rare crest in worldwide TKE history that very few chapters were founded under. </p>
 <p> Xi - TKE at Washington University is both the oldest fraternity on campus and the longest continually-active chapter of Tau Kappa Epsilon in the world. In September of 2020 Xi Chapter will turn 100 years old.</p>
